--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
       display: flex;
       width: 100%;
       height: 100px;
+      /* justify content distribueix els elements horitzontalment */
       justify-content: space-between;
+      /* alinear els continguts verticalment amb align items */
       align-items: center;
       position: fixed;
       background-color: white;
+      padding: 0 20px; 
+      /* padding per donar espai als costats */
     }
 
     nav {
@@ -28,21 +32,22 @@
       align-items: center;
       width: 100%;
     }
-
+/* amplada perquè ocupi el necessari, marge dreta per alinear la navbar a la dreta */
     #logo {
-      height: 40px;
+      width: 120px;
       margin-right: 60rem;
     }
-
+/* ul flex pq els elements no s'apilin, gap per distanciar els elements entre ells */
     ul {
       display: flex;
       gap: 20px;
     }
-
+/* Fer desapareixer punts dels li */
     li {
       display: flex;
     }
 
+  /* Links sense subrallar ni negre */
     a {
       text-decoration: none;
       color: black;
