--- a/index.html
+++ b/index.html
@@ -6,99 +6,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Spotify Clone</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css?family=Poppins');
-
-    body {
-      font-family: 'Poppins';
-    }
-
-    .header {
-      display: flex;
-      width: 100%;
-      height: 100px;
-      /* justify content distribueix els elements horitzontalment */
-      justify-content: space-between;
-      /* alinear els continguts verticalment amb align items */
-      align-items: center;
-      position: fixed;
-      background-color: white;
-      padding: 0 20px; 
-      /* padding per donar espai als costats */
-    }
-
-    nav {
-      display: flex;
-      align-items: center;
-      width: 100%;
-    }
-/* amplada perquè ocupi el necessari, marge dreta per alinear la navbar a la dreta */
-    #logo {
-      width: 120px;
-      margin-right: 60rem;
-    }
-/* ul flex pq els elements no s'apilin, gap per distanciar els elements entre ells */
-    ul {
-      display: flex;
-      gap: 20px;
-    }
-/* Fer desapareixer punts dels li */
-    li {
-      display: flex;
-    }
-
-  /* Links sense subrallar ni negre */
-    a {
-      text-decoration: none;
-      color: black;
-      font-size: 16px;
-    }
-  </style>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-  <header>
-    <div class="header">
-      <nav>
-        <span>
-          <img src="images/spotify-logo.png" alt="Spotify logo" id="logo">
-        </span>
-        <ul>
-          <li><a href="#">Premium</a></li>
-          <li><a href="#">Discover</a></li>
-          <li><a href="#">Help</a></li>
-          <li><a href="#">Download</a></li>
-        </ul>
-      </nav>
+  <div class="cover">
+    <header>
+      <div class="header">
+        <nav>
+          <span>
+            <img src="images/spotify-logo.png" alt="Spotify logo" id="logo">
+          </span>
+          <ul>
+            <li><a href="#">Premium</a></li>
+            <li><a href="#">Discover</a></li>
+            <li><a href="#">Help</a></li>
+            <li><a href="#">Download</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="section1">
+      <h1 class="section1__header">Music for everyone.</h1>
+      <p class="section1__p">Spotify is now free on mobile, tablet and computer.</p>
+      <p class="section1__p">
+        Listen to the
+        right music, wherever you are.
+      </p>
     </div>
-  </header>
-
-
-  <div>
-    <h1>Music for everyone.</h1>
-    <p>Spotify is now free on mobile, tablet and computer.</p>
-    <p>
-      Listen to the
-      right music, wherever you are.
-    </p>
   </div>
+
   <div>
     <h2>What's on Spotify? </h2>
-    <section>
-      <div>
-        <h3 class="section2">Millions of Songs</h3>
-        There are millions of songs on Spotify
+    <section class="section2">
+      <div class="section2__div">
+        <img src="images\music-icon.png" alt="sound icon" id="sound__icon">
+        <h3 class="section2__header">Millions of Songs</h3>
+        <p class="section 2__content">There are millions of songs on Spotify</p>
       </div>
-      <div>
-        <h3 class="section2">HD Music</h3>
-        Listen to music as if you were listening live
+      <div class="section2__div">
+        <img src="images/high-quality-icon.png" alt="High quality sound" id="high__quality">
+        <h3 class="section2__header">HD Music</h3>
+        <p class="section2__content">Listen to music as if you were listening live</p>
       </div>
-      <div>
-        <h3 class="section2">Stream</h3> Everywhere Stream music on your smartphone, tablet or computer
+      <div class="section2__div">
+        <img src="images/devices-icon.png" alt="Compatible devices" id="devices">
+        <h3 class="section2__header">Stream Everywhere</h3>
+        <p class="section2__content">Stream music on your smartphone, tablet or computer</p>
       </div>
     </section>
   </div>
-  <div>
+  <div class="">
     <h2>It's as yeezy as Kanye West.</h2>
     <h3>Search</h3>
     <p>Know what you want to listen to? Just search and hit play. </p>
