--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <div>
-    <h2>What's on Spotify? </h2>
+    <h2 class="section2__h2">What's on Spotify? </h2>
     <section class="section2">
       <div class="section2__div">
         <img src="images\music-icon.png" alt="sound icon" id="sound__icon">
