section 3 primers estils

--- a/index.html
+++ b/index.html
@@ -56,14 +56,19 @@
       </div>
     </section>
   </div>
-  <div class="">
-    <h2>It's as yeezy as Kanye West.</h2>
-    <h3>Search</h3>
-    <p>Know what you want to listen to? Just search and hit play. </p>
-    <h3>Browse</h3>
-    <p>Check out the latest charts, brand new releases and great playlists for right now. </p>
-    <h3>Discover</h3>
-    <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio.</p>
+  <div>
+    <div class="section3">
+      <h2 class="section3__h2, text">It's as yeezy as Kanye West.</h2>
+      <h3 class="section3__h3, text">Search</h3>
+      <p class="section3__p, text">Know what you want to listen to? Just search and hit play. </p>
+      <h3 class="section3__h3, text">Browse</h3>
+      <p class="section3__p, text">Check out the latest charts, brand new releases and great playlists for right now. </p>
+      <h3 class="section3__h3, text">Discover</h3>
+      <p class="section3__p, text">Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio.</p>
+      
+      <img src="images/spotify-icon-white.png" alt="White Spotify icon" id="spotify__white">
+    </div>
+    <img src="images/spotify-app.jpg" alt="Spotify App" id="spotify__app">
   </div>
 </body>
 
