--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </nav>
       </div>
     </header>
-    <div class="section1">
-      <h1 class="section1__header">Music for everyone.</h1>
-      <p class="section1__p">Spotify is now free on mobile, tablet and computer.</p>
-      <p class="section1__p">
+    <div class="hero">
+      <h1 class="hero__header">Music for everyone.</h1>
+      <p class="hero__p">Spotify is now free on mobile, tablet and computer.</p>
+      <p class="hero__p">
         Listen to the
         right music, wherever you are.
       </p>
@@ -37,39 +37,42 @@
   </div>
 
   <div>
-    <h2 class="section2__h2">What's on Spotify? </h2>
-    <section class="section2">
-      <div class="section2__div">
+    <h2 class="features__h2">What's on Spotify? </h2>
+    <section class="features">
+      <div class="features__div">
         <img src="images\music-icon.png" alt="sound icon" id="sound__icon">
-        <h3 class="section2__header">Millions of Songs</h3>
+        <h3 class="features__header">Millions of Songs</h3>
         <p class="section 2__content">There are millions of songs on Spotify</p>
       </div>
-      <div class="section2__div">
+      <div class="features__div">
         <img src="images/high-quality-icon.png" alt="High quality sound" id="high__quality">
-        <h3 class="section2__header">HD Music</h3>
-        <p class="section2__content">Listen to music as if you were listening live</p>
+        <h3 class="features__header">HD Music</h3>
+        <p class="features__content">Listen to music as if you were listening live</p>
       </div>
-      <div class="section2__div">
+      <div class="features__div">
         <img src="images/devices-icon.png" alt="Compatible devices" id="devices">
-        <h3 class="section2__header">Stream Everywhere</h3>
-        <p class="section2__content">Stream music on your smartphone, tablet or computer</p>
+        <h3 class="features__header">Stream Everywhere</h3>
+        <p class="features__content">Stream music on your smartphone, tablet or computer</p>
       </div>
     </section>
   </div>
-  <div>
-    <div class="section3">
-      <h2 class="section3__h2, text">It's as yeezy as Kanye West.</h2>
-      <h3 class="section3__h3, text">Search</h3>
-      <p class="section3__p, text">Know what you want to listen to? Just search and hit play. </p>
-      <h3 class="section3__h3, text">Browse</h3>
-      <p class="section3__p, text">Check out the latest charts, brand new releases and great playlists for right now. </p>
-      <h3 class="section3__h3, text">Discover</h3>
-      <p class="section3__p, text">Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio.</p>
-      
-      <img src="images/spotify-icon-white.png" alt="White Spotify icon" id="spotify__white">
-    </div>
-    <img src="images/spotify-app.jpg" alt="Spotify App" id="spotify__app">
+
+  <div class="actions">
+    <h2 class="actions__title, text">It's as yeezy as Kanye West.</h2>
+    <article>
+      <h3 class="actions__h3, text">Search</h3>
+      <p class="actions__p, text">Know what you want to listen to? Just search and hit play. </p>
+      <h3 class="actions__h3, text">Browse</h3>
+      <p class="actions__p, text">Check out the latest charts, brand new releases and great playlists for right now. </p>
+      <h3 class="actions__h3, text">Discover</h3>
+      <p class="actions__p, text">Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy
+        Radio.</p>
+      <img src="images/spotify-icon-white.png" alt="White Spotify icon" class="spotify-icon">
+    </article>
+    <!-- <div class="spotify__app__container"><img src="images/spotify-app.jpg" alt="Spotify App" id="spotify__app"></div> -->
   </div>
+
+
 </body>
 
 </html>
